--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,104 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@600;800&display=swap");
 
-/* Set Colors and Font */
+/* Main background */
 :root {
   font-family: 'Manrope', sans-serif;
   background-color: hsl(230, 100, 99%);
   color: hsl(225, 20%, 60%);
+  margin: 0;
+  height: 100vh;
+  /* background-image: url(../images/bg-pattern.svg); */
+  background-repeat: repeat-x;
+  /* background-position: top left; */
+  /* background-size: 100% 50%; */
+  background-image: url(../design/active-states.jpg);
+  background-position: top center;
+  background-size: 1440px;
 }
+/* End main background */
 
+/* Heading and text */
 h1 {
   color: hsl(227, 35%, 25%);
   font-size: 28px;
   line-height: 90%;
 }
 
-.pricing {
-  background-color: hsl(0, 0%, 100%);
+header {
+  margin: 70px auto 55px auto;
+  background-image: url(../images/pattern-circles.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  text-align: center;
+  max-height: 15%;
+  height: 100px;
+  padding: 20px
 }
 
-.price-slider {
-  --full-slider-bar: hsl(174, 77%, 80%);
-  --slider-background: hsl(174, 86%, 45%);
-  --empty-slider-bar: hsl(224, 65%, 95%);
+.medium-text {
+  font-size: 15px;
 }
+/* End Heading and text */
+
+/* Main Pircing section */
+.pricing {
+  background-color: hsl(0, 0%, 0%);
+  /* background-color: hsl(0, 0%, 100%); */
+  opacity: 0.5;
+  margin: auto;
+  padding: 25px 50px;
+  width: 440px;
+  height: 350px;
+  max-width: 90%;
+  max-height: 60%;
+  box-shadow: 0 0 40px hsl(225, 20%, 90%);
+  border-radius: 10px;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+}
+
+.flex-between {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+/* End Main Pricing */
+
+/* Pageviews and Price */
+.price-month{
+  display: inline-flex;
+  align-items: center;
+  gap:10px;
+}
+
+#pageviews {
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+.price {
+  font-size: 40px;
+}
+/* End Pageviews and Price */
+
+/* Yearly Toggle */
+.toggle {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+.toggle input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+/* Yearly Toggle End */
 
 .price-toggle {
   --discount-background: hsl(14, 92%, 95%);
@@ -33,49 +110,3 @@ h1 {
   --button-text: hsl(226, 100%, 87%);
   --button-background: hsl(227, 35%, 25%);
 }
-
-.medium-text {
-  font-size: 15px;
-}
-/* Set Colors and Font End */
-
-/* Main background */
-:root {
-  margin: 0;
-  height: 100vh;
-  background-image: url(../images/bg-pattern.svg);
-  background-repeat: repeat-x;
-  background-position: top left;
-  background-size: 100% 50%;
-}
-/* End main background */
-
-/* Heading and text */
-header {
-  margin: 50px;
-  background-image: url(../images/pattern-circles.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
-  text-align: center;
-  max-height: 15%;
-  height: 100px;
-  padding: 20px
-}
-/* End and text */
-
-/* Main Pircing section */
-.pricing {
-  margin: auto;
-  width: 500px;
-  height: 400px;
-  max-width: 90%;
-  max-height: 60%;
-  box-shadow: 0 0 40px hsl(225, 20%, 90%);
-  border-radius: 10px;
-  display:flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-}
-/* End Main Pricing */
