--- a/css/toggle.css
+++ b/css/toggle.css
@@ -1,8 +1,9 @@
 .toggle {
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 30px;
+  margin: 0 12px;
+  position: relative;
+  display: inline-block;
+  width: 45px;
+  height: 20px;
 }
 
 /* Hide checkbox */
@@ -12,34 +13,41 @@
 
 /* Slider inside toggle */
 .toggle-slider {
-    position:absolute;
-    cursor: pointer;
-    border-radius: 34px;
-    background-color: black;
-    -webkit-transition: .4s;
-    transition: .4s;
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 34px;
+  background-color: hsl(223, 50%, 87%);
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 .toggle-slider::before {
-    position:absolute;
-    content: "";
-    border-radius: 50%;
-    background-color: red;
-    -webkit-transition: .4s;
-    transition: .4s;
+  position: absolute;
+  content: "";
+  border-radius: 50%;
+  height: 15px;
+  width: 15px;
+  left: 2px;
+  bottom: 2px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 input:checked + .toggle-slider {
-    background-color: #2196F3;
-  }
-  
-  input:focus + .toggle-slider {
-    box-shadow: 0 0 1px #2196F3;
-  }
-  
-  input:checked + .toggle-slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
-  }
-  
+  background-color: hsl(174, 86%, 45%);
+}
+
+input:focus + .toggle-slider {
+  box-shadow: 0 0 1px #2196f3;
+}
+
+input:checked + .toggle-slider:before {
+  -webkit-transform: translateX(24px);
+  -ms-transform: translateX(24px);
+  transform: translateX(24px);
+}
