--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 /* Main background */
 :root {
-  font-family: 'Manrope', sans-serif;
+  font-family: "Manrope", sans-serif;
   background-color: hsl(230, 100, 99%);
   color: hsl(225, 20%, 60%);
   margin: 0;
@@ -10,7 +10,7 @@
   background-image: url(../images/bg-pattern.svg);
   background-repeat: repeat-x;
   background-position: top left;
-  background-size: 100% 50%;  
+  background-size: 100% 50%;
 }
 /* End main background */
 
@@ -33,7 +33,8 @@ header {
   text-align: center;
   max-height: 15vh;
   height: 100px;
-  padding: 20px;
+  width: 100%;
+  padding: 20px 0px;
 }
 
 .medium-text {
@@ -56,7 +57,7 @@ header {
   max-height: 65vh;
   box-shadow: 0 0 40px hsl(225, 20%, 90%);
   border-radius: 10px;
-  display:flex;
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: start;
@@ -72,10 +73,10 @@ header {
 /* End Main Pricing */
 
 /* Pageviews and Price */
-.price-month{
+.price-month {
   display: inline-flex;
   align-items: center;
-  gap:10px;
+  gap: 10px;
 }
 
 #pageviews {
@@ -108,13 +109,20 @@ header {
 /* Billing Toggle End */
 
 hr {
-  width: 540px;
-  margin: 10px;
+  width: 100%;
+  position: fixed;
+  bottom: 30%;
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #eee;
+  margin: 1em 0;
+  padding: 0;
 }
 
 /* List and Button */
 #list-and-button {
-  padding: 4px 0;
+  padding: 20px 0;
 }
 
 ul {
@@ -148,21 +156,35 @@ footer {
   bottom: 5%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 11px; 
-  text-align: center; 
+  width: 100%;
+  font-size: 11px;
+  text-align: center;
 }
 
-footer a { 
-  color: hsl(228, 45%, 44%); 
+footer a {
+  color: hsl(228, 45%, 44%);
 }
 /* End Attribution */
 
+@media (orientation: portrait) {
+  .pricing {
+    max-width: 60vw;
+    height: 500px;
+    max-height: 70vh;
+    top: 60%;
+  }
 
-@media (orientation:landscape) and (max-height: 600px) {
+
+  footer {
+    bottom: 0%;
+  }
+}
+
+@media (orientation: landscape) and (max-height: 600px) {
   h1 {
     line-height: 50%;
   }
-  
+
   header {
     top: 8%;
   }
