--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ h1 {
 
 header {
   position: fixed;
-  top: 13%;
+  top: 16%;
   left: 50%;
   transform: translate(-50%, -50%);
   background-image: url(../images/pattern-circles.svg);
@@ -60,28 +60,26 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: start;
-}
-
-.flex-between {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+  flex-flow: wrap;
 }
 /* End Main Pricing */
 
 /* Pageviews and Price */
-.price-month {
-  display: inline-flex;
-  align-items: center;
-  gap: 10px;
-}
-
 #pageviews {
   text-transform: uppercase;
   letter-spacing: 1px;
+  justify-self: flex-start;
+  flex-basis: 50%;
+}
+
+#price-month {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 10px;
+  justify-self: flex-end;
+  flex-basis: 50%;
 }
 
 .price {
@@ -93,8 +91,8 @@ header {
 
 /* Billing Toggle */
 .toggle-billing {
-  margin: 30px 10px;
-  align-self: flex-end;
+  margin: 30px 0;
+  /* align-self: flex-end; */
   font-size: 12px;
 }
 
@@ -103,8 +101,10 @@ header {
   color: hsl(15, 100%, 70%);
   border-radius: 15px;
   padding: 2px 6px;
-  margin: 8px;
+  margin: 0 8px;
   font-size: 10px;
+  position: absolute;
+  
 }
 /* Billing Toggle End */
 
@@ -116,24 +116,29 @@ hr {
   height: 1px;
   border: 0;
   border-top: 1px solid #eee;
-  margin: 1em 0;
   padding: 0;
 }
 
 /* List and Button */
-#list-and-button {
-  padding: 20px 0;
-}
-
-ul {
+#info-list {
   list-style-image: url("../images/icon-check.svg");
-  /* list-style: none; */
-  padding: 0 15px;
+  padding: 30px 0 0 15px;
+  /* padding: 7% 0 0 5%; */
   font-size: 12px;
+  justify-self: flex-start;
+  flex-basis: 45%;
 }
 
-li {
+#info-list li {
   padding: 5px 8px;
+}
+
+#start-trial-holder {
+  text-align: right;
+  /* padding: 7% 0 0 0; */
+  padding: 30px 0 0 0;
+  flex-basis: 50%;  
+  justify-self: flex-end;
 }
 
 #start-trial {
@@ -142,7 +147,7 @@ li {
   width: 170px;
   height: 45px;
   border-radius: 45px;
-  cursor: pointer;
+  cursor: pointer;  
 }
 
 #start-trial:hover {
@@ -165,7 +170,7 @@ footer a {
   color: hsl(228, 45%, 44%);
 }
 /* End Attribution */
-
+/* 
 @media (orientation: portrait) {
   .pricing {
     max-width: 60vw;
@@ -196,4 +201,4 @@ footer a {
   footer {
     bottom: 0%;
   }
-}
+} */
